entity_macros/tests/ui/derive/ent/unsupported-field-type-of-slice.stderr
error: Slices are not supported as field types
  --> $DIR/unsupported-field-type-of-slice.rs:18:15
   |
18 |     my_field: [u32],
   |               ^^^^^

error[E0277]: the size for values of type `[u32]` cannot be known at compilation time
   --> $DIR/unsupported-field-type-of-slice.rs:3:10
    |
3   | #[derive(Clone, Ent)]
    |          ^^^^^ doesn't have a size known at compile-time
    |
    = help: within `TestEnt`, the trait `std::marker::Sized` is not implemented for `[u32]`
    = note: required because it appears within the type `TestEnt`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
